# AI-Legal-Document-Summarizer

./: .gitignore  README.md  postman.json
AI-Legal-Document-Summarizer/: AI-Legal-Document-Summarizer.sln
AI-Legal-Document-Summarizer/Cosmin.API/: Cosmin.API.csproj  Cosmin.API.http  Program.cs  appsettings.json
AI-Legal-Document-Summarizer/Cosmin.API/Controllers/: DocumentsController.cs  UsersController.cs
AI-Legal-Document-Summarizer/Cosmin.Application/: Cosmin.Application.csproj
AI-Legal-Document-Summarizer/Cosmin.Application/Abstractions/: IAiSummarizerService.cs  IDocumentSummaryRepository.cs  IUserRepository.cs
AI-Legal-Document-Summarizer/Cosmin.Domain/Entities/: DocumentSummary.cs  SavedSummary.cs  User.cs
AI-Legal-Document-Summarizer/Cosmin.Domain/Enums/: UserRole.cs
AI-Legal-Document-Summarizer/Cosmin.Frontend/: Program.cs  _Imports.razor
AI-Legal-Document-Summarizer/Cosmin.Infrastructure/: Cosmin.Infrastructure.csproj
AiSummarizer/: README.md  main.py  postman_collection.json  requirements.txt  test_main.http
AiSummarizer/tests/: test_main.py
ai_summarizer/: pyproject.toml  requirements.txt  sample_contract.txt
ai_summarizer/ai_summarizer/: __init__.py  analyzer.py  cli.py  readers.py
backend/: Directory.Build.props  backend.sln
backend/backend/: Program.cs  backend.csproj
backend/unitests/: LoginServiceTests.cs  RegisterServiceTests.cs  RegisterUserValidatorTests.cs  UnitTest1.cs  unitests.csproj
database/: .env  database.sql  docker-compose.yml
frontend/: frontend.sln
frontend/frontend/: Program.cs  _Imports.razor
(+57 files in other folders)
